первый драфт задания exercises06, добавлен интерфейс для класса моделей роботов, загрузчик классов